force-app/main/default/objects/Generic_REST_Route__mdt/Generic_REST_Route__mdt.object-meta.xml
<CustomObject>
    <label>Generic REST Route</label>
    <pluralLabel>Generic REST Routes</pluralLabel>
</CustomObject>