force-app/main/default/objects/Generic_REST_Route__mdt/fields/Access_Control_Field__c.field-meta.xml
<CustomField>
    <fullName>Access_Control_Field__c</fullName>
    <description>Field Name of Custom Setting &quot;REST_Access__c&quot; who controls the access to the rest endpoint</description>
    <label>Access Control Field</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>