force-app/main/default/objects/Generic_REST_Route__mdt/fields/Http_Method__c.field-meta.xml
<CustomField>
    <fullName>Http_Method__c</fullName>
    <label>Http Method</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Delete</fullName>
                <default>true</default>
                <label>Delete</label>
            </value>
            <value>
                <fullName>Get</fullName>
            </value>
            <value>
                <fullName>Patch</fullName>
            </value>
            <value>
                <fullName>Post</fullName>
            </value>
            <value>
                <fullName>Put</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>