force-app/main/default/objects/Generic_REST_Route__mdt/fields/Path__c.field-meta.xml
<CustomField>
    <fullName>Path__c</fullName>
    <label>Path</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>